# chess-gaze

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.superpowers/sdd/: optional-qa-task-4-report.md  optional-qa-task-5-report.md  task-1-report-3d-scene.md  task-1-report.md  task-2-report-3d-scene.md  task-2-report.md  task-3-report-3d-scene.md  task-3-report.md  task-4-report-3d-scene.md  task-4-report.md  task-5-report-3d-scene.md  task-6-report-3d-scene.md  task-7-report-3d-scene.md  task-8-report-3d-scene.md  task-9-report-3d-scene.md
docs/: gaze-precision-hypotheses.md
src/chess_gaze/: __init__.py  analysis_resume.py  artifact_runs.py  calibration.py  cli.py  configuration.py  errors.py  eye_observation.py  face_landmark_indices.py  face_observation.py  frame_observation.py  frame_records.py  gaze_calibration.py  gaze_observation.py  gaze_precision_benchmark.py  geometry.py  head_pose.py  image_io.py  model_assets.py  model_registry.json  native_log_filter.py  pipeline.py  qa_summary.py  run_equivalence.py  scene_artifacts.py  scene_calibration.py  scene_geometry.py  scene_records.py  scene_viewer.py  sphere_projection.py  target_plane.py  unigaze_batch_benchmark.py  unigaze_preprocessing.py  unigaze_runtime.py  video_decode.py  viewer_dependencies.py  visualization.py
tests/: test_package_metadata.py
tests/chess_gaze/: face_observation_fakes.py  test_analysis_resume.py  test_artifact_runs.py  test_calibration.py  test_cli.py  test_configuration.py  test_eye_observation.py  test_eye_observation_real_video.py  test_face_observation.py  (+34 more)
(+96 files in other folders)
