[project]
name = "chess-gaze"
version = "0.1.0"
description = "Private Python project scaffold for future stream-analysis work."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=17.1.0",
    "mediapipe>=0.10.35",
    "numpy>=2.5.0",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
]

[project.scripts]
chess-gaze = "chess_gaze.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv]
override-dependencies = [
    "opencv-contrib-python; sys_platform == 'never'",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_gaze"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
